--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,12 +2,16 @@ spring:
   application:
     name: spring-boot-infinity
 
-
   datasource:
     url: jdbc:postgresql://localhost:5432/twitter
     username: postgres
     password: 123
     driver-class-name: org.postgresql.Driver
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
   jpa:
     hibernate:
@@ -18,9 +22,9 @@ spring:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
-
 springdoc:
   swagger-ui:
     path: /docs
   api-docs:
     path: /v3/api-docs
+
